@@ -1,3 +1,7 @@
+2003-03-30  Junichi Uekawa  <dancer@debian.org>
+
+	* Documentation/pbuilder-doc.xml (PBUILDER_UML_IMAGE): spell-checked
+
 2003-03-17  Junichi Uekawa  <dancer@debian.org>
 
 	* Documentation/pbuilder-doc.xml: add new FAQ entry on 
